# lizen

./: .env-example  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  instrucoes.md  persona_example.yaml
.github/WORKFLOWS/: cpp_build.yml
include/cpu_llm_project/: api_server.hpp  dummy.hpp  llm_engine.hpp
src/: api_server.cpp  dummy_lib_file.cpp  llm_engine.cpp  main.cpp
tests/: CMakeLists.txt  test_example.cpp  test_llm_engine.cpp
